Finish authorization services including docs
